CocacolaProjectJar/src/objects/COA__c.object
<CustomObject>
    <description>Chart of Authority</description>
    <fields>
        <fullName>BOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Board of Directors</description>
        <label>BOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELT_1__c</fullName>
        <description>ELT: Executive Leadership Team</description>
        <label>ELT 1</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELT_2__c</fullName>
        <description>ELT: Executive Leadership Team</description>
        <label>ELT 2</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELT_3__c</fullName>
        <description>ELT: Executive Leadership Team</description>
        <label>ELT 3</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function_CokeOne_1__c</fullName>
        <label>Function CokeOne 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_CokeOne_2__c</fullName>
        <label>Function CokeOne 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_CokeOne_3__c</fullName>
        <label>Function CokeOne 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Commercial_1__c</fullName>
        <label>Function Commercial 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Commercial_2__c</fullName>
        <label>Function Commercial 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Commercial_3__c</fullName>
        <label>Function Commercial 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Finance_1__c</fullName>
        <label>Function Finance 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Finance_2__c</fullName>
        <label>Function Finance 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Finance_3__c</fullName>
        <label>Function Finance 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_HR_1__c</fullName>
        <label>Function HR 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_HR_2__c</fullName>
        <label>Function HR 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_HR_3__c</fullName>
        <label>Function HR 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Other_1__c</fullName>
        <label>Function Other 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Other_2__c</fullName>
        <label>Function Other 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Other_3__c</fullName>
        <label>Function Other 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Procurement_1__c</fullName>
        <label>Function Procurement 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Procurement_2__c</fullName>
        <label>Function Procurement 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Procurement_3__c</fullName>
        <label>Function Procurement 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Supply_Chain_1__c</fullName>
        <label>Function Supply Chain 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Supply_Chain_2__c</fullName>
        <label>Function Supply Chain 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Supply_Chain_3__c</fullName>
        <label>Function Supply Chain 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Copy_10__c</fullName>
        <label>Info Copy 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Copy_1__c</fullName>
        <label>Info Copy 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Copy_2__c</fullName>
        <label>Info Copy 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Bracket__c</fullName>
        <label>Left Bracket</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Left_Sign__c</fullName>
        <label>Left Sign</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryCOACategory__c</fullName>
        <inlineHelpText>This field allows the RFA Creator to select up to 3 COA Categories that apply to the requested transaction.</inlineHelpText>
        <label>Primary COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory2__c</fullName>
        <label>Primary COA Sub Category 2</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Officially and internally approved and budgeted assets (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Officially and internally approved and budgeted assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Additional, unbudgeted Capital Projects, Medium Projects and Small Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Scope changes in previously approved Capital Projects or Small Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Sale and write-off of Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Transactions Involving Intangible Rights and Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory3__c</fullName>
        <label>Primary COA Sub Category 3</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Investment Transactions Involving Intangible Rights and Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. New location or extension of existing location (㎡)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Field Sales Operations Customer (Excluding &quot;SAKAYA KAM&quot;)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory__c</fullName>
        <label>Primary COA Sub Category 1</label>
        <picklist>
            <controllingField>PrimaryCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_List__c</fullName>
        <label>Record Type List</label>
        <picklist>
            <picklistValues>
                <fullName>Small Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Right_Bracket__c</fullName>
        <label>Right Bracket</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_Sign__c</fullName>
        <label>Right Sign</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shareholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shareholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threshold_Type__c</fullName>
        <label>Threshold Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value with Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unkown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>COA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Record_Type_List__c</columns>
        <columns>PrimaryCOACategory__c</columns>
        <columns>PrimaryCOASubCategory__c</columns>
        <columns>PrimaryCOASubCategory2__c</columns>
        <columns>PrimaryCOASubCategory3__c</columns>
        <columns>Function_CokeOne_1__c</columns>
        <columns>Memo__c</columns>
        <columns>Threshold_Type__c</columns>
        <columns>BOD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>COA No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>